# ai-seo-expert

./: .env.production.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_tasks.py  0003_findings_approvals.py  0004_pull_requests.py  0005_memory_entries.py  0006_users.py  0007_workflow_branch.py  0008_task_started_at.py  0009_error_messages.py
backend/app/: main.py
backend/scripts/: run_eval.py
backend/tests/: conftest.py  test_agent_factory.py  test_agent_registry.py  test_analysis_runner.py  test_approval_service.py  test_auth_routes.py  test_auth_service.py  test_cost_estimation.py  test_duplicate_detector.py  test_error_handlers.py  test_eval_runner.py  test_eval_scoring.py  test_evidence_validator.py  test_findings_and_approvals_routes.py  test_fix_manager.py  test_fix_worker.py  test_github_file_reader.py  test_github_provider.py  test_local_artifact_store.py  test_memory_policies.py  test_memory_service.py  test_orchestrator.py  test_oss_artifact_store.py  test_prompt_injection_guard.py  test_pull_request_service.py  test_pull_requests_route.py  test_qwen_model_client.py  test_rate_limiter.py  test_result_synthesizer.py  test_retry_policy.py  test_reviewer_agent.py  test_sandbox_model_client.py  test_schema_validator.py  test_seo_manager.py  test_sse_publisher.py  test_task_state_machine.py  test_tasks_route.py  test_worker_agents.py  test_workflow_events_route.py  test_workflows.py
docker/: entrypoint.sh  (+1 more)
(+161 files in other folders)
